--- a/requirements.txt
+++ b/requirements.txt
@@ -11,8 +11,10 @@ cleo==0.8.1
 clikit==0.6.2
 crashtest==0.3.1
 cryptography==36.0.2
+cycler==0.11.0
 distlib==0.3.4
 filelock==3.6.0
+fonttools==4.33.3
 grapheme==0.6.0
 h11==0.13.0
 html5lib==1.1
@@ -20,12 +22,17 @@ idna==3.3
 importlib-metadata==4.11.3
 iniconfig==1.1.1
 keyring==23.5.0
+kiwisolver==1.4.2
 lockfile==0.12.2
+matplotlib==3.5.2
 msgpack==1.0.3
+numpy==1.22.3
 outcome==1.1.0
 packaging==20.9
+pandas==1.4.2
 pastel==0.2.1
 pexpect==4.8.0
+Pillow==9.1.0
 pkginfo==1.8.2
 platformdirs==2.5.2
 pluggy==1.0.0
@@ -37,6 +44,8 @@ pyOpenSSL==22.0.0
 pyparsing==3.0.8
 PySocks==1.7.1
 pytest==7.1.1
+python-dateutil==2.8.2
+pytz==2022.1
 requests==2.27.1
 requests-toolbelt==0.9.1
 selenium==4.1.3
